// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaximizeRestoreButton renders with maximize 1`] = `
<CustomizedActionButton
  ariaHidden={true}
  iconProps={
    {
      "iconName": "stop",
    }
  }
  id="maximize-button"
  onClick={[Function]}
  tabIndex={-1}
/>
`;

exports[`MaximizeRestoreButton renders with restore 1`] = `
<CustomizedActionButton
  ariaHidden={true}
  id="maximize-button"
  onClick={[Function]}
  onRenderIcon={[Function]}
  tabIndex={-1}
/>
`;

exports[`MaximizeRestoreButton renders with restore 2`] = `<RestoreIcon />`;
